# example-vcpkg-grpc

./: .gitignore  AsioGrpcProtobufGenerator.cmake  CMakeLists.txt  CMakePresets.json  README.md  bind_completion_executor.hpp  client.cpp  cmake-format.yaml  main.cpp  precompiled_header.hpp  protobuf.cpp  server.cpp  vcpkg.json
13/: CMakePresets.json  dataProvider.cpp  dataProvider.hpp  vcpkg.json
13/proto/ole/v1/: dataProvider.proto
14/: CMakeLists.txt  server.cpp
16/: README.md  client.cpp  precompiled_header.hpp
55/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
55/proto/: CMakeLists.txt
69/: README.md
69/proto/: CMakeLists.txt
69/src/: CMakeLists.txt  main.cpp
81/: CMakePresets.json
81/proto/: CMakeLists.txt
81/vcpkg/ports/asio-grpc/: portfile.cmake  usage
97/: CMakeLists.txt  vcpkg.json
97/proto/: CMakeLists.txt
doxygen-awesome/: CMakeLists.txt
doxygen-awesome/src/: test.hpp
example-vcpkg-grpc/: CMakeLists.txt  README.md  vcpkg.json
proto/helloworld/: helloworld.proto
proto/muusbolla/: muusbolla.proto
protos/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
